# skew-t_mcp

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
src/skewt_mcp/: __init__.py  __main__.py  data.py  indices.py  plot.py  server.py
tests/: test_basic.py
