[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skewt-mcp"
version = "0.1.0"
description = "MCP server that generates Skew-T Log-P diagrams from HRRR model data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "metpy>=1.5",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "httpx>=0.24",
]

[project.scripts]
skewt-mcp = "skewt_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skewt_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
